@@ -34,6 +34,7 @@ void CGUIDialogProgress::StartModal(DWORD dwParentId)
   // the main rendering thread (this should really be handled via
   // a thread message though IMO)
   m_bRunning = true;
+  m_dialogClosing = false;
   m_gWindowManager.RouteToWindow(this);
 
   // active this window...
@@ -44,7 +45,7 @@ void CGUIDialogProgress::StartModal(DWORD dwParentId)
   m_iCurrent=0;
   m_iMax=0;
 
-  while (IsAnimating(ANIM_TYPE_WINDOW_OPEN))
+  while (m_bRunning && IsAnimating(ANIM_TYPE_WINDOW_OPEN))
     Progress();
 }
 
